use bootstrap for result page styles

--- a/app/components/result/result.css
+++ b/app/components/result/result.css
@@ -1,445 +1,43 @@
-/* .brg {float:right;width:33%;padding-right:10px; position: relative;} */
-.listItem {
-  -webkit-app-region: no-drag;
-  -webkit-appearance: none;
-  -webkit-background-composite: source-over;
-  -webkit-border-horizontal-spacing: 0px;
-  -webkit-border-vertical-spacing: 0px;
-  -webkit-box-align: stretch;
-  -webkit-box-decoration-break: slice;
-  -webkit-box-direction: normal;
-  -webkit-box-flex: 0;
-  -webkit-box-flex-group: 1;
-  -webkit-box-lines: single;
-  -webkit-box-ordinal-group: 1;
-  -webkit-box-orient: horizontal;
-  -webkit-box-pack: start;
-  -webkit-box-reflect: none;
-  -webkit-column-break-after: auto;
-  -webkit-column-break-before: auto;
-  -webkit-column-break-inside: auto;
-  -webkit-column-count: auto;
-  -webkit-column-gap: normal;
-  -webkit-column-rule-color: rgb(51, 51, 51);
-  -webkit-column-rule-style: none;
-  -webkit-column-rule-width: 0px;
-  -webkit-column-span: none;
-  -webkit-column-width: auto;
-  -webkit-font-smoothing: auto;
-  -webkit-highlight: none;
-  -webkit-hyphenate-character: auto;
-  -webkit-line-box-contain: block inline replaced;
-  -webkit-line-break: auto;
-  -webkit-line-clamp: none;
-  -webkit-locale: auto;
-  -webkit-margin-after-collapse: collapse;
-  -webkit-margin-before-collapse: collapse;
-  -webkit-mask-box-image: none;
-  -webkit-mask-box-image-outset: 0px;
-  -webkit-mask-box-image-repeat: stretch;
-  -webkit-mask-box-image-slice: 0 fill;
-  -webkit-mask-box-image-source: none;
-  -webkit-mask-box-image-width: auto;
-  -webkit-mask-clip: border-box;
-  -webkit-mask-composite: source-over;
-  -webkit-mask-image: none;
-  -webkit-mask-origin: border-box;
-  -webkit-mask-position: 0% 0%;
-  -webkit-mask-repeat: repeat;
-  -webkit-mask-size: auto;
-  -webkit-print-color-adjust: economy;
-  -webkit-rtl-ordering: logical;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.4);
-  -webkit-text-combine: none;
-  -webkit-text-decorations-in-effect: none;
-  -webkit-text-emphasis-color: rgb(51, 51, 51);
-  -webkit-text-emphasis-position: over;
-  -webkit-text-emphasis-style: none;
-  -webkit-text-fill-color: rgb(51, 51, 51);
-  -webkit-text-orientation: vertical-right;
-  -webkit-text-security: none;
-  -webkit-text-stroke-color: rgb(51, 51, 51);
-  -webkit-text-stroke-width: 0px;
-  -webkit-user-drag: auto;
-  -webkit-user-modify: read-only;
-  -webkit-user-select: text;
-  align-content: start;
-  align-items: start;
-  align-self: start;
-  alignment-baseline: auto;
-  animation-delay: 0s;
-  animation-direction: normal;
-  animation-duration: 0s;
-  animation-fill-mode: none;
-  animation-iteration-count: 1;
-  animation-name: none;
-  animation-play-state: running;
-  animation-timing-function: ease;
-  backface-visibility: visible;
-  background-attachment: scroll;
-  background-blend-mode: normal;
-  background-clip: border-box;
-  background-color: rgb(255, 255, 255);
-  background-image: none;
-  background-origin: padding-box;
-  background-position: 0% 0%;
-  background-repeat: repeat;
-  background-size: auto;
-  baseline-shift: 0px;
-  border-bottom-color: rgb(51, 51, 51);
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-  border-bottom-style: none;
-  border-bottom-width: 0px;
-  border-collapse: separate;
-  -webkit-border-image: none;
-  border-image-outset: 0px;
-  border-image-repeat: stretch;
-  border-image-slice: 100%;
-  border-image-source: none;
-  border-image-width: 1;
-  border-left-color: rgb(51, 51, 51);
-  border-left-style: none;
-  border-left-width: 0px;
-  border-right-color: rgb(51, 51, 51);
-  border-right-style: none;
-  border-right-width: 0px;
-  border-top-color: rgb(51, 51, 51);
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-top-style: none;
-  border-top-width: 0px;
-  bottom: auto;
-  box-shadow: none;
-  box-sizing: content-box;
-  buffered-rendering: auto;
-  caption-side: top;
-  clear: none;
-  clip: auto;
-  clip-path: none;
-  clip-rule: nonzero;
-  color: rgb(51, 51, 51);
-  color-interpolation: sRGB;
-  color-interpolation-filters: linearRGB;
-  color-rendering: auto;
-  cursor: auto;
-  cx: 0px;
-  cy: 0px;
-  direction: ltr;
-  display: list-item;
-  dominant-baseline: auto;
-  empty-cells: show;
-  fill: rgb(0, 0, 0);
-  fill-opacity: 1;
-  fill-rule: nonzero;
-  filter: none;
-  flex-basis: auto;
-  flex-direction: row;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-wrap: nowrap;
-  float: none;
-  flood-color: rgb(0, 0, 0);
-  flood-opacity: 1;
-  font-family: tahoma, arial, sans-serif;
-  font-kerning: auto;
-  font-size: 12px;
-  font-stretch: normal;
-  font-style: normal;
-  font-variant: normal;
-  font-variant-ligatures: normal;
-  font-weight: normal;
-  glyph-orientation-horizontal: 0deg;
-  glyph-orientation-vertical: auto;
-  height: 130px;
-  image-rendering: auto;
-  isolation: auto;
-  justify-content: start;
-  left: auto;
-  letter-spacing: normal;
-  lighting-color: rgb(255, 255, 255);
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  margin-bottom: 3px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  marker-end: none;
-  marker-mid: none;
-  marker-start: none;
-  mask: none;
-  mask-type: luminance;
-  max-height: none;
-  max-width: none;
-  min-height: 130px;
-  min-width: 0px;
-  mix-blend-mode: normal;
-  object-fit: fill;
-  object-position: 50% 50%;
-  opacity: 1;
-  order: 0;
-  orphans: auto;
-  outline-color: rgb(51, 51, 51);
-  outline-offset: 0px;
-  outline-style: none;
-  outline-width: 0px;
-  overflow-wrap: normal;
-  overflow-x: visible;
-  overflow-y: visible;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  page-break-after: auto;
-  page-break-before: auto;
-  page-break-inside: auto;
-  paint-order: fill stroke markers;
-  perspective: none;
-  perspective-origin: 440.128px 75px;
-  pointer-events: auto;
-  position: relative;
-  r: 0px;
-  resize: none;
-  right: auto;
-  rx: 0px;
-  ry: 0px;
-  shape-image-threshold: 0;
-  shape-margin: 0px;
-  shape-outside: none;
-  shape-rendering: auto;
-  speak: normal;
-  stop-color: rgb(0, 0, 0);
-  stop-opacity: 1;
-  stroke: none;
-  stroke-dasharray: none;
-  stroke-dashoffset: 0px;
-  stroke-linecap: butt;
-  stroke-linejoin: miter;
-  stroke-miterlimit: 4;
-  stroke-opacity: 1;
-  stroke-width: 1px;
-  tab-size: 8;
-  table-layout: auto;
-  text-align: left;
-  text-anchor: start;
-  text-decoration: none;
-  text-indent: 0px;
-  text-overflow: clip;
-  text-rendering: auto;
-  text-shadow: none;
-  text-transform: none;
-  top: auto;
-  touch-action: auto;
-  transform: none;
-  transform-origin: 440.128px 75px;
-  transform-style: flat;
-  transition-delay: 0s;
-  transition-duration: 0s;
-  transition-property: all;
-  transition-timing-function: ease;
-  unicode-bidi: normal;
-  vector-effect: none;
-  vertical-align: middle;
-  visibility: visible;
-  white-space: normal;
-  widows: 1;
-  width: 860.27px;
-  will-change: auto;
-  word-break: normal;
-  word-spacing: 0px;
-  word-wrap: normal;
-  writing-mode: lr-tb;
-  -webkit-writing-mode: horizontal-tb;
-  x: 0px;
-  y: 0px;
-  z-index: 1;
-  zoom: 1;
-  width: 90%;
-  border:1px solid black;
-}
-.hotelPic {
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  color: rgb(51, 51, 51);
-  cursor: auto;
-  display: block;
-  float: left;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 130px;
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  margin-right: 10px;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  text-align: left;
-  text-decoration: none;
+.list-item{
+  border: 1px solid;
+  margin-bottom: 10px;
 
-  zoom: 1;
-}
-.hotel_info{
-  color: rgb(51, 51, 51);
-  display: block;
-  float: left;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 84.7159px;
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  margin-top: -3px;
-  padding-bottom: 45px;
-  padding-right: 0px;
-  text-align: left;
-  width: 290.398px;
-  zoom: 1;
 }
 
-.hotel_name{
-  color: rgb(51, 51, 51);
-  display: block;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  /* height: 47.2727px; */
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 10px;
-  text-align: left;
-  width: 344.105px;
-  zoom: 1;
-}
-
-
-.location {
-  color: rgb(51, 51, 51);
-  display: block;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 21.9886px;
-  line-height: 22px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  padding-bottom: 0px;
+.result-list ul {
   padding-left: 0px;
-  padding-right: 17px;
-  padding-top: 0px;
-  position: relative;
-  text-align: left;
-  width: 256.42px;
-  zoom: 1;
 }
 
-.pvalue {
-  bottom: 10px;
-  color: rgb(51, 51, 51);
-  display: block;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 17.2727px;
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
+.result-list * {
+  padding-left: 0px;
+}
+
+.hotel-info *{
+  margin-left: 15px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+/* make sure all list item divs have same height */
+.row-height {
+  height: 140px;
+}
+
+
+.points-string {
   position: absolute;
-  text-align: left;
-
-  zoom: 1;
+  bottom: 0px;
+  margin-bottom: 0px;
 }
 
-.brg{
-  bottom: 5px;
-  color: rgb(51, 51, 51);
-  display: block;
-  float: none;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 69.0909px;
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
+.hotelPrice {
   position: absolute;
-  right: 10px;
-  text-align: right;
-  width: 154.844px;
-  zoom: 1;
+  top: 50%;
+  left: 50%;
 }
 
-.hotel_price{
-  bottom: 5px;
-  color: rgb(51, 51, 51);
-  display: block;
-  float: none;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 69.0909px;
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
+.canBRG {
   position: absolute;
-  right: 10px;
-  text-align: right;
-  width: 154.844px;
-  zoom: 1;
-}
-
-.price_box {
-  color: rgb(51, 51, 51);
-  display: block;
-  font-family: tahoma, arial, sans-serif;
-  font-size: 12px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  height: 69.0909px;
-  line-height: 16.3636px;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
-  position: relative;
-  text-align: right;
-  width: 154.844px;
-  zoom: 1;
-
+  top: 20%;
+  left: 50%;
 }
