--- a/app/components/result/result.css
+++ b/app/components/result/result.css
@@ -30,14 +30,16 @@
   margin-bottom: 0px;
 }
 
-.hotelPrice {
+.hotel-price {
   position: absolute;
   top: 50%;
   left: 50%;
 }
 
-.canBRG {
+.can-brg {
   position: absolute;
   top: 20%;
   left: 50%;
 }
+
+
