Ready to implement detail fetcher

--- a/app/components/detail/detail.css
+++ b/app/components/detail/detail.css
@@ -17,11 +17,11 @@
   margin-top: 0px;
 }
 
-.hotel-info {
+.detail-hotel-info {
   height: 150px;
 }
 
-.hotel-info * {
+.detail-hotel-info * {
   margin-left: 0px;
 }
 
