--- a/app/components/search/style.css
+++ b/app/components/search/style.css
@@ -3,14 +3,15 @@
     padding-left: 0;
     z-index: 100;
     position: absolute;
-    width: 95%;
+    width: 100%;
 }
 
 .menu li {
     padding-top: 3px;
     padding-bottom: 3px;
+    padding-left: 10px;
     cursor: pointer;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.6);
     color: #d3d3d3;
 }
 
@@ -18,6 +19,14 @@
     display: inline;
 }
 
-.menu-item:hover {
+.menu li:hover {
     background-color: #808080;
+}
+
+.input-fields > div {
+    color: #d3d3d3 !important;
+}
+
+.input-fields > input {
+    color: white !important;
 }
