--- a/app/components/detail/detail.css
+++ b/app/components/detail/detail.css
@@ -1,6 +1,9 @@
 .detail {
   width: 70%;
+  height: 60%;
+  bottom: 30%;
   margin-left: 15%;
+  padding-bottom: 80px;
 }
 
 .detail *{
@@ -15,6 +18,7 @@
   margin-right: 0px;
   margin-bottom: 0px;
   margin-top: 0px;
+  height: 50%;
 }
 
 .detail-hotel-info {
