--- a/app/components/result/result.css
+++ b/app/components/result/result.css
@@ -90,8 +90,8 @@
 
 .brg span{
   /* text-align: right; */
-  font-size: 0.9vw;
-  margin-left:65%;
+  font-size: 120%;
+  margin-left:62%;
 }
 
 .canbrg {
