--- a/app/components/result/result.css
+++ b/app/components/result/result.css
@@ -6,12 +6,14 @@
 
 .list-item{
   outline: 1px solid #A0A0A0;
+  
   margin-bottom: 10px;
   cursor: pointer;
 }
 
 .list-item img{
   height: 100px;
+  border-radius: 0px;
 }
 .list-item:hover {
   background-color: #E0E0E0;
