--- a/app/components/accounts/account.css
+++ b/app/components/accounts/account.css
@@ -44,10 +44,10 @@
   /* cursor: pointer !important; */
 }
 
-.loginToggle{
+.login-toggle{
   margin-top: 10px;
   text-align: center;
-  
+  cursor: pointer;
 }
 .email > input{
   color: white !important;
@@ -67,4 +67,5 @@
   color: grey !important;
   font-size: 80% !important;
 }
+
 
